hphp/hack/test/typecheck/disjoint/enum.php.rust_elab.exp
File "enum.php", line 10, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 14, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 18, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 22, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 26, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 30, characters 6-7:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 37, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 37, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E2 & E1)`
File "enum.php", line 40, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 40, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E5 & E1)`
File "enum.php", line 41, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 41, characters 20-26:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(string & E1)`
File "enum.php", line 42, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 42, characters 17-23:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E1 & int)`
File "enum.php", line 43, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 43, characters 16-22:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 3, characters 51-59:
  But got `(E5 & E4)`
File "enum.php", line 46, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "enum.php", line 3, characters 10-13:
  This is the method with `where` type constraints
  File "enum.php", line 46, characters 22-28:
  Expected `nothing`
  File "enum.php", line 3, characters 42-43:
    via this generic `T3`
  File "enum.php", line 46, characters 18-19:
  But got `arraykey` arising from an implicit `as arraykey` constraint on this type
